--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <div id="root">Loading...</div>
-        <script src="./App.js"></script>
+        <script src="./components/App.js"></script>
     </body>
 </html>
